trunk/NewArchive/4097624dddf6c18f80e280a2621cf3ac-9ed7c815abc680c1206ac401fbd99c16/output
main.cpp:1:18: error: '_glo' was not declared in this scope
 auto& instance = _glo->Instance();
                  ^
main.cpp:3:1: error: expected unqualified-id before 'if'
 if (instance->isDebug()) {
 ^
main.cpp:8:1: error: expected unqualified-id before 'for'
 for (auto _gtIterB=grow_timers.begin(); _gtIterB!=grow_timers.end();) { 
 ^
main.cpp:8:41: error: '_gtIterB' does not name a type
 for (auto _gtIterB=grow_timers.begin(); _gtIterB!=grow_timers.end();) { 
                                         ^
main.cpp:8:69: error: expected unqualified-id before ')' token
 for (auto _gtIterB=grow_timers.begin(); _gtIterB!=grow_timers.end();) { 
                                                                     ^
